# f1-race-predictor

./: .gitignore  MANIFEST.in  ML_COMPARISON.md  README.md  pyproject.toml  requirements.txt  setup.py  train_model.py
f1_predictor/: __init__.py  analyzer.py  cache.py  cli.py  data_fetcher.py  engine.py  formatter.py  ml_analyzer.py  models.py
models/: f1_predictor.pkl
